[tool.poetry]
name = "bpmo1"
version = "0.1.0"
description = ""
authors = ["Dmitry Molokhov <molokhovdmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "1.1.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
